// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enmasse test module platform --help module: result.stdout 1`] = `
"Usage: bin-init <command> [options]

Options:
  -v, --version                                 output the version number
  -h, --help                                    display help for command

Commands:
  build|b [options] <target>                    Command to build platform entities - applications, modules, libraries
  analyze|a [options] <target>                  Command for analyzing application
  start-prod|sp [options] <target>              Command to run in production mode
  start|s [options] <target>                    Command to run in development mode
  lint|l <target>                               Command to run lint
  task|t <name> [options]                       Run task
  generate|g [target] [generator]               Command for code generation
    [target] - application name
    [generator] - action|reducer|bundle|component|page|module
  new|n [options] <name>                        Command for generating a new application
  update|u [options] [to]                       All tramvai packages update command
    [to] - target version <latest|prerelease|X.X.X|^X.X.X> (default: latest)
  add [options] <packageNames...>               Tramvai package install command
  static|st [options] <target>                  Command to export application routes to HTML pages
  benchmark|bench [options] <command> <target>  Command to run benchmark of the @tramvai/cli

  Run tramvai <command> --help
 for detailed usage of given command.
"
`;

exports[`enmasse test module platform build module: monitoring 1`] = `
{
  "events": [
    [
      {
        "arguments": [
          "build",
          "module",
        ],
        "dependencies": {
          "babel": Any<String>,
          "react": Any<String>,
          "swc": Any<String>,
          "webpack": Any<String>,
        },
        "event": "cli:init",
        "level": "INFO",
        "message": "@tramvai/cli initialized",
        "os": {
          "arch": Any<String>,
          "cpus": {
            "count": Any<Number>,
            "model": Any<String>,
          },
          "nodeVersion": Any<String>,
          "packageManager": {
            "name": "unknown",
          },
          "platform": Any<String>,
        },
        "system": "tramvai-cli",
        "timestamp": Any<String>,
        "tramvai": {
          "name": "@tramvai/cli",
          "version": "0.0.0-stub",
        },
        "uptime": Any<Number>,
        "vcs": {
          "jobUrl": Any<String>,
          "pipelineUrl": Any<String>,
          "repository": Any<String>,
          "tenant": Any<String>,
        },
        "x-command-id": Any<String>,
      },
    ],
    [
      {
        "command": "build",
        "event": "cli:command:start",
        "features": {},
        "level": "INFO",
        "message": "@tramvai/cli production build started",
        "os": {
          "arch": Any<String>,
          "cpus": {
            "count": Any<Number>,
            "model": Any<String>,
          },
          "nodeVersion": Any<String>,
          "packageManager": {
            "name": "unknown",
          },
          "platform": Any<String>,
        },
        "parameters": {
          "target": "module",
        },
        "project": {
          "name": "module",
          "type": "module",
        },
        "system": "tramvai-cli",
        "timestamp": Any<String>,
        "tramvai": {
          "name": "@tramvai/cli",
          "version": "0.0.0-stub",
        },
        "vcs": {
          "jobUrl": Any<String>,
          "pipelineUrl": Any<String>,
          "repository": Any<String>,
          "tenant": Any<String>,
        },
        "x-command-id": Any<String>,
      },
    ],
    [
      {
        "command": "build",
        "duration": Any<Number>,
        "event": "cli:command:end",
        "level": "INFO",
        "memoryUsage": {
          "maxHeapTotal": Any<Number>,
          "maxHeapUsed": Any<Number>,
          "maxRss": Any<Number>,
        },
        "message": "@tramvai/cli production build finished",
        "os": {
          "arch": Any<String>,
          "cpus": {
            "count": Any<Number>,
            "model": Any<String>,
          },
          "nodeVersion": Any<String>,
          "packageManager": {
            "name": "unknown",
          },
          "platform": Any<String>,
        },
        "parameters": {
          "target": "module",
        },
        "project": {
          "name": "module",
          "type": "module",
        },
        "system": "tramvai-cli",
        "timestamp": Any<String>,
        "tramvai": {
          "name": "@tramvai/cli",
          "version": "0.0.0-stub",
        },
        "vcs": {
          "jobUrl": Any<String>,
          "pipelineUrl": Any<String>,
          "repository": Any<String>,
          "tenant": Any<String>,
        },
        "x-command-id": Any<String>,
      },
    ],
  ],
}
`;

exports[`enmasse test module platform build module: output.less 1`] = `
[
  {
    "extension": ".js",
    "name": "module_client.js",
    "path": "dist/modules/module/prerelease/module_client.js",
    "type": "file",
  },
  {
    "extension": ".js",
    "name": "module_server.js",
    "path": "dist/modules/module/prerelease/module_server.js",
    "type": "file",
  },
  {
    "extension": ".css",
    "name": "module.css",
    "path": "dist/modules/module/prerelease/module.css",
    "type": "file",
  },
  {
    "extension": ".json",
    "name": "stats.json",
    "path": "dist/modules/module/prerelease/stats.json",
    "type": "file",
  },
]
`;

exports[`enmasse test package platform --help package: result.stdout 1`] = `
"Usage: bin-init <command> [options]

Options:
  -v, --version                                 output the version number
  -h, --help                                    display help for command

Commands:
  build|b [options] <target>                    Command to build platform entities - applications, modules, libraries
  analyze|a [options] <target>                  Command for analyzing application
  start-prod|sp [options] <target>              Command to run in production mode
  start|s [options] <target>                    Command to run in development mode
  lint|l <target>                               Command to run lint
  task|t <name> [options]                       Run task
  generate|g [target] [generator]               Command for code generation
    [target] - application name
    [generator] - action|reducer|bundle|component|page|module
  new|n [options] <name>                        Command for generating a new application
  update|u [options] [to]                       All tramvai packages update command
    [to] - target version <latest|prerelease|X.X.X|^X.X.X> (default: latest)
  add [options] <packageNames...>               Tramvai package install command
  static|st [options] <target>                  Command to export application routes to HTML pages
  benchmark|bench [options] <command> <target>  Command to run benchmark of the @tramvai/cli

  Run tramvai <command> --help
 for detailed usage of given command.
"
`;

exports[`enmasse test package platform build package: monitoring 1`] = `
{
  "events": [
    [
      {
        "arguments": [
          "build",
          "package",
        ],
        "dependencies": {
          "babel": Any<String>,
          "react": Any<String>,
          "swc": Any<String>,
          "webpack": Any<String>,
        },
        "event": "cli:init",
        "level": "INFO",
        "message": "@tramvai/cli initialized",
        "os": {
          "arch": Any<String>,
          "cpus": {
            "count": Any<Number>,
            "model": Any<String>,
          },
          "nodeVersion": Any<String>,
          "packageManager": {
            "name": "unknown",
          },
          "platform": Any<String>,
        },
        "system": "tramvai-cli",
        "timestamp": Any<String>,
        "tramvai": {
          "name": "@tramvai/cli",
          "version": "0.0.0-stub",
        },
        "uptime": Any<Number>,
        "vcs": {
          "jobUrl": Any<String>,
          "pipelineUrl": Any<String>,
          "repository": Any<String>,
          "tenant": Any<String>,
        },
        "x-command-id": Any<String>,
      },
    ],
    [
      {
        "command": "build",
        "event": "cli:command:start",
        "features": {},
        "level": "INFO",
        "message": "@tramvai/cli production build started",
        "os": {
          "arch": Any<String>,
          "cpus": {
            "count": Any<Number>,
            "model": Any<String>,
          },
          "nodeVersion": Any<String>,
          "packageManager": {
            "name": "unknown",
          },
          "platform": Any<String>,
        },
        "parameters": {
          "target": "package",
        },
        "project": {
          "name": "package",
          "type": "package",
        },
        "system": "tramvai-cli",
        "timestamp": Any<String>,
        "tramvai": {
          "name": "@tramvai/cli",
          "version": "0.0.0-stub",
        },
        "vcs": {
          "jobUrl": Any<String>,
          "pipelineUrl": Any<String>,
          "repository": Any<String>,
          "tenant": Any<String>,
        },
        "x-command-id": Any<String>,
      },
    ],
    [
      {
        "command": "build",
        "duration": Any<Number>,
        "event": "cli:command:end",
        "level": "INFO",
        "memoryUsage": {
          "maxHeapTotal": Any<Number>,
          "maxHeapUsed": Any<Number>,
          "maxRss": Any<Number>,
        },
        "message": "@tramvai/cli production build finished",
        "os": {
          "arch": Any<String>,
          "cpus": {
            "count": Any<Number>,
            "model": Any<String>,
          },
          "nodeVersion": Any<String>,
          "packageManager": {
            "name": "unknown",
          },
          "platform": Any<String>,
        },
        "parameters": {
          "target": "package",
        },
        "project": {
          "name": "package",
          "type": "package",
        },
        "system": "tramvai-cli",
        "timestamp": Any<String>,
        "tramvai": {
          "name": "@tramvai/cli",
          "version": "0.0.0-stub",
        },
        "vcs": {
          "jobUrl": Any<String>,
          "pipelineUrl": Any<String>,
          "repository": Any<String>,
          "tenant": Any<String>,
        },
        "x-command-id": Any<String>,
      },
    ],
  ],
}
`;

exports[`enmasse test package platform build package: output.less 1`] = `
[
  {
    "extension": ".ts",
    "name": "browser.d.ts",
    "path": "dist/browser.d.ts",
    "type": "file",
  },
  {
    "extension": ".js",
    "name": "browser.js",
    "path": "dist/browser.js",
    "type": "file",
  },
  {
    "extension": ".ts",
    "name": "index.d.ts",
    "path": "dist/index.d.ts",
    "type": "file",
  },
  {
    "extension": ".js",
    "name": "index.es.js",
    "path": "dist/index.es.js",
    "type": "file",
  },
  {
    "extension": ".js",
    "name": "index.js",
    "path": "dist/index.js",
    "type": "file",
  },
]
`;

exports[`enmasse test react-app platform --help react-app: result.stdout 1`] = `
"Usage: bin-init <command> [options]

Options:
  -v, --version                                 output the version number
  -h, --help                                    display help for command

Commands:
  build|b [options] <target>                    Command to build platform entities - applications, modules, libraries
  analyze|a [options] <target>                  Command for analyzing application
  start-prod|sp [options] <target>              Command to run in production mode
  start|s [options] <target>                    Command to run in development mode
  lint|l <target>                               Command to run lint
  task|t <name> [options]                       Run task
  generate|g [target] [generator]               Command for code generation
    [target] - application name
    [generator] - action|reducer|bundle|component|page|module
  new|n [options] <name>                        Command for generating a new application
  update|u [options] [to]                       All tramvai packages update command
    [to] - target version <latest|prerelease|X.X.X|^X.X.X> (default: latest)
  add [options] <packageNames...>               Tramvai package install command
  static|st [options] <target>                  Command to export application routes to HTML pages
  benchmark|bench [options] <command> <target>  Command to run benchmark of the @tramvai/cli

  Run tramvai <command> --help
 for detailed usage of given command.
"
`;

exports[`enmasse test react-app platform build react-app: monitoring 1`] = `
{
  "events": [
    [
      {
        "arguments": [
          "build",
          "react-app",
        ],
        "dependencies": {
          "babel": Any<String>,
          "react": Any<String>,
          "swc": Any<String>,
          "webpack": Any<String>,
        },
        "event": "cli:init",
        "level": "INFO",
        "message": "@tramvai/cli initialized",
        "os": {
          "arch": Any<String>,
          "cpus": {
            "count": Any<Number>,
            "model": Any<String>,
          },
          "nodeVersion": Any<String>,
          "packageManager": {
            "name": "unknown",
          },
          "platform": Any<String>,
        },
        "system": "tramvai-cli",
        "timestamp": Any<String>,
        "tramvai": {
          "name": "@tramvai/cli",
          "version": "0.0.0-stub",
        },
        "uptime": Any<Number>,
        "vcs": {
          "jobUrl": Any<String>,
          "pipelineUrl": Any<String>,
          "repository": Any<String>,
          "tenant": Any<String>,
        },
        "x-command-id": Any<String>,
      },
    ],
    [
      {
        "command": "build",
        "event": "cli:command:start",
        "features": {
          "devTools": true,
          "fileSystemRouting": false,
          "lightningCss": false,
          "moduleImage": true,
          "modulePwa": true,
          "reactCompiler": false,
          "selectiveTranspilation": "only-modern",
          "swc": false,
          "transitionsRouterProvider": false,
          "viewTransitions": false,
        },
        "level": "INFO",
        "message": "@tramvai/cli production build started",
        "os": {
          "arch": Any<String>,
          "cpus": {
            "count": Any<Number>,
            "model": Any<String>,
          },
          "nodeVersion": Any<String>,
          "packageManager": {
            "name": "unknown",
          },
          "platform": Any<String>,
        },
        "parameters": {
          "target": "react-app",
        },
        "project": {
          "name": "react-app",
          "type": "application",
        },
        "system": "tramvai-cli",
        "timestamp": Any<String>,
        "tramvai": {
          "name": "@tramvai/cli",
          "version": "0.0.0-stub",
        },
        "vcs": {
          "jobUrl": Any<String>,
          "pipelineUrl": Any<String>,
          "repository": Any<String>,
          "tenant": Any<String>,
        },
        "x-command-id": Any<String>,
      },
    ],
    [
      {
        "command": "build",
        "duration": Any<Number>,
        "event": "cli:command:end",
        "level": "INFO",
        "memoryUsage": {
          "maxHeapTotal": Any<Number>,
          "maxHeapUsed": Any<Number>,
          "maxRss": Any<Number>,
        },
        "message": "@tramvai/cli production build finished",
        "os": {
          "arch": Any<String>,
          "cpus": {
            "count": Any<Number>,
            "model": Any<String>,
          },
          "nodeVersion": Any<String>,
          "packageManager": {
            "name": "unknown",
          },
          "platform": Any<String>,
        },
        "parameters": {
          "target": "react-app",
        },
        "project": {
          "name": "react-app",
          "type": "application",
        },
        "system": "tramvai-cli",
        "timestamp": Any<String>,
        "tramvai": {
          "name": "@tramvai/cli",
          "version": "0.0.0-stub",
        },
        "vcs": {
          "jobUrl": Any<String>,
          "pipelineUrl": Any<String>,
          "repository": Any<String>,
          "tenant": Any<String>,
        },
        "x-command-id": Any<String>,
      },
    ],
  ],
}
`;

exports[`enmasse test react-app platform build react-app: output.less 1`] = `
[
  {
    "extension": ".css",
    "name": "platform.css",
    "path": "dist/client/platform.css",
    "type": "file",
  },
  {
    "extension": ".js",
    "name": "platform.js",
    "path": "dist/client/platform.js",
    "type": "file",
  },
  {
    "extension": ".map",
    "name": "platform.js.map",
    "path": "dist/client/platform.js.map",
    "type": "file",
  },
  {
    "extension": ".js",
    "name": "react.js",
    "path": "dist/client/react.js",
    "type": "file",
  },
  {
    "extension": ".map",
    "name": "react.js.map",
    "path": "dist/client/react.js.map",
    "type": "file",
  },
  {
    "extension": ".json",
    "name": "stats",
    "path": "dist/client/stats",
    "type": "file",
  },
  {
    "extension": ".js",
    "name": "tinkoff-examples_react-app_src_bundles_first_ts.chunk.js",
    "path": "dist/client/tinkoff-examples_react-app_src_bundles_first_ts.chunk.js",
    "type": "file",
  },
  {
    "extension": ".map",
    "name": "tinkoff-examples_react-app_src_bundles_first_ts.chunk.js.map",
    "path": "dist/client/tinkoff-examples_react-app_src_bundles_first_ts.chunk.js.map",
    "type": "file",
  },
  {
    "extension": ".js",
    "name": "tinkoff-examples_react-app_src_bundles_main_ts.chunk.js",
    "path": "dist/client/tinkoff-examples_react-app_src_bundles_main_ts.chunk.js",
    "type": "file",
  },
  {
    "extension": ".map",
    "name": "tinkoff-examples_react-app_src_bundles_main_ts.chunk.js.map",
    "path": "dist/client/tinkoff-examples_react-app_src_bundles_main_ts.chunk.js.map",
    "type": "file",
  },
  {
    "extension": ".js",
    "name": "tinkoff-examples_react-app_src_bundles_second_ts.chunk.js",
    "path": "dist/client/tinkoff-examples_react-app_src_bundles_second_ts.chunk.js",
    "type": "file",
  },
  {
    "extension": ".map",
    "name": "tinkoff-examples_react-app_src_bundles_second_ts.chunk.js.map",
    "path": "dist/client/tinkoff-examples_react-app_src_bundles_second_ts.chunk.js.map",
    "type": "file",
  },
  {
    "extension": ".js",
    "name": "tinkoff-examples_react-app_src_bundles_third_ts.chunk.js",
    "path": "dist/client/tinkoff-examples_react-app_src_bundles_third_ts.chunk.js",
    "type": "file",
  },
  {
    "extension": ".map",
    "name": "tinkoff-examples_react-app_src_bundles_third_ts.chunk.js.map",
    "path": "dist/client/tinkoff-examples_react-app_src_bundles_third_ts.chunk.js.map",
    "type": "file",
  },
  {
    "extension": ".js",
    "name": "server",
    "path": "dist/server/server",
    "type": "file",
  },
  {
    "extension": ".map",
    "name": "server.map",
    "path": "dist/server/server.map",
    "type": "file",
  },
  {
    "extension": ".json",
    "name": "stats",
    "path": "dist/server/stats",
    "type": "file",
  },
]
`;
